--- a/frontend/packingplans/src/app/pages/card-page/card-page.component.html
+++ b/frontend/packingplans/src/app/pages/card-page/card-page.component.html
@@ -10,13 +10,6 @@
   <div class="row mt-5">
     <div class="col-sm-8 description">&nbsp;&nbsp;
       {{location.description}}
-      <div>
-        <img
-          src="/assets/images/travel_image1.jpg"
-          style="max-width: 70%;">
-        <button (click)="newTrip()" class="trip-button">Plan trip<br>here!</button>
-      </div>
-
     </div>
     <div class="col-sm-2 ">
       <app-date-picker (selectedRangeValueChange)="onSelectedRangeChange($event)"
@@ -24,12 +17,22 @@
       </app-date-picker>
     </div>
   </div>
+  <div class="row mt-5">
+    <div class="col-sm-10">
+      <img alt="travel image"
+           src="/assets/images/travel_image.png"
+           class="travel-image">
+    </div>
+    <div class="col-sm-2">
+      <button (click)="newTrip()" class="trip-button">Plan trip here!</button>
+    </div>
+  </div>
   <div class="line"></div>
   <div class="row">
     <div class="col-sm-2"></div>
     <div class="col-sm-8 mt-5 mb-5">
       <agm-map [latitude]="Number(location.latitude)" [longitude]="Number(location.longitude)" [styles]="styles"
-               [zoom]="10">
+               [zoom]="10" style="box-shadow: 2px 2px 20px rgb(34, 33, 54);">
         <agm-marker [latitude]="Number(location.latitude)" [longitude]="Number(location.longitude)"></agm-marker>
       </agm-map>
     </div>
