--- a/frontend/packingplans/src/styles.css
+++ b/frontend/packingplans/src/styles.css
@@ -17,7 +17,7 @@
 
 html, body {
   height: 100%;
-  background-image: url("src/assets/images/background.jpg");
+  background-color: white;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -79,4 +79,8 @@ body {
 
 .fc-daygrid-event {
   background-color: #222136 !important;
+}
+
+.demo-inline-calendar-card {
+  box-shadow: 0 0 20px rgb(34, 33, 54);
 }
