--- a/frontend/packingplans/src/app/pages/card-page/card-page.component.css
+++ b/frontend/packingplans/src/app/pages/card-page/card-page.component.css
@@ -10,10 +10,11 @@
   margin-top: 10%;
   font-weight: 400;
   font-family: "Madera W01 Bold";
+  text-shadow: 2px 2px 15px rgb(34, 33, 54);
   color: white;
 }
 
-.descripion {
+.description {
   margin-left: 5%;
   font-size: x-large;
   padding: 0;
@@ -23,11 +24,8 @@
   font-family: "Madera Regular";
 }
 
-.calendar {
-}
-
 .tags {
-  background-color: #6e6e6e; /* Green */
+  background-color: #6e6e6e;
   border: none;
   color: white;
   text-align: center;
@@ -38,24 +36,47 @@
   width: 5%;
   margin-top: 10%;
   margin-bottom: 3%;
-  margin-right: 1%;
+  margin-right: 2%;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 5px;
+  box-shadow: 2px 2px 20px rgb(34, 33, 54);
   font-family: "Madera Regular";
 }
 
-agm-map {
-  height: 300px;
+.travel-image {
+  max-width: 70%;
+  margin-left: 6%;
 }
 
+agm-map {
+  height: 500px;
+}
+
+.line {
+  height: 3px;
+  background-color: #222136;
+  margin: 2% 5% 0px 5%;
+}
+
+
 .trip-button {
-  background-color: #222136; /* Green */
+  background-color: #35318d;
   border: none;
   color: white;
-  padding: 15px 20px 20px 20px;
+  padding: 10px;
   text-align: center;
   text-decoration: none;
   font-size: 20px;
   border-radius: 15px;
   line-height: 1.2;
+  width: 133%;
+  height: 50px;
+  margin: 3% 33% 0px 0px;
   float: right;
   font-family: "Madera W01 Bold";
+}
+
+.trip-button:hover {
+  background-color: #8c8bcb;
 }
