connect calendar frontend to backend

--- a/frontend/packingplans/src/app/components/trip-actions/trip-actions.component.html
+++ b/frontend/packingplans/src/app/components/trip-actions/trip-actions.component.html
@@ -1,4 +1,4 @@
-<div style="overflow: hidden">
+<form style="overflow: hidden">
   <div class="row">
     <p>trip-actions works!</p>
   </div>
@@ -13,4 +13,4 @@
       </a>
     </div>
   </div>
-</div>
+</form>
