--- a/frontend/packingplans/src/app/pages/trip-plan-page/trip-plan-page.component.css
+++ b/frontend/packingplans/src/app/pages/trip-plan-page/trip-plan-page.component.css
@@ -169,12 +169,20 @@ a.button2:hover {
 }
 
 .title-input {
-  width: 40%;
+  width: 75%;
   border: none;
   border-radius: 2px;
   margin-left: 3%;
   background-color: #f1eff3;
   color: #222136;
+}
+
+.hour-picker {
+  border: none;
+  border-radius: 2px;
+  background-color: #f1eff3;
+  float: right;
+  margin-right: 3%;
 }
 
 .description-input {
@@ -187,4 +195,16 @@ a.button2:hover {
   color: #222136;
   height: 5vh;
   margin-bottom: 4%;
+}
+
+.mat-button {
+  float: right;
+  color: #222136;
+  margin-left: 2%;
+  cursor: pointer;
+  margin-right: 1%;
+}
+
+.mat-button:hover {
+  transform: scale(1.25) perspective(1px);
 }
