--- a/frontend/packingplans/src/app/pages/trip-plan-page/trip-plan-page.component.html
+++ b/frontend/packingplans/src/app/pages/trip-plan-page/trip-plan-page.component.html
@@ -24,7 +24,10 @@
         <ul class="activities-list">
           <li *ngFor="let activity of activities">
             <span class="arrow">&#8594;</span>
-            &nbsp; {{ activity.name }}
+            &nbsp; {{ activity.name }} ({{activity.startTime}})
+            <a class="mat-button" (click)="deleteActivity(activity)">
+              <mat-icon>delete</mat-icon>
+            </a>
             <br>
             <div class="description">{{activity.description}}</div>
           </li>
@@ -42,6 +45,7 @@
         </div>
         <hr class="horizontal-line-2">
         <input [(ngModel)]="newActivityName" placeholder="Activity name" class="title-input">
+        <input [(ngModel)]="newActivityHour" type="time" required class="hour-picker">
         <textarea [(ngModel)]="newActivityDescription" placeholder="Activity details"
                   class="description-input"></textarea>
       </div>
