--- a/frontend/packingplans/src/styles.css
+++ b/frontend/packingplans/src/styles.css
@@ -24,6 +24,8 @@ html, body {
   position: absolute;
   width: 100%;
   overflow-x: hidden;
+  left: 0px !important;
+  top: 0px !important;
 }
 
 body {
@@ -81,6 +83,10 @@ body {
   background-color: #222136 !important;
 }
 
+.cdk-global-scrollblock {
+  overflow: hidden;
+}
+ 
 .demo-inline-calendar-card {
   box-shadow: 0 0 20px rgb(34, 33, 54);
 }
