--- a/frontend/packingplans/src/app/pages/card-page/card-page.component.css
+++ b/frontend/packingplans/src/app/pages/card-page/card-page.component.css
@@ -80,3 +80,12 @@ agm-map {
 .trip-button:hover {
   background-color: #8c8bcb;
 }
+
+.error {
+  padding: 0.5% 0.2% 0.5% 1%;
+  width: 122%;
+  height: 20%;
+  margin: 6% 37% 0px 0px;
+  float: right;
+  text-align: center;
+}
