add about us/steps sections in homepage

--- a/frontend/packingplans/src/app/components/footer/footer.component.html
+++ b/frontend/packingplans/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-white footer mt-5" style="background-color: #222136;">
+<footer class="text-center text-white footer" style="background-color: #222136;">
   <div class="container pt-4">
     <section class="mb-4">
       <a class="btn btn-link btn-floating btn-lg text-white m-1"
