--- a/frontend/packingplans/src/app/components/navbar/navbar.component.html
+++ b/frontend/packingplans/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,12 @@
-<div class="toolbar">
+<div class="toolbar" id="navbar">
   <mat-toolbar class="toolbar mat-elevation-z8 navbar-scroll">
     <img alt="Packing plans Logo" height="100%" routerLink="/home" src="../../../assets/images/logo.png"
          style="flex-shrink: 0; cursor: pointer" width=auto/>
     <span class="logoName">PackingPlans</span>
     <a class="mat-button" mat-button routerLink="/locations" style="margin-right: 1%; font-family: 'Madera Regular'">Locations</a>
-    <a class="mat-button" mat-button style="font-family: 'Madera Regular'">How It Works</a>
+    <a (click)="scrollToHowItWorks()"
+       class="mat-button" mat-button style="font-family: 'Madera Regular'">How It Works
+    </a>
     <a class="mat-button" mat-button routerLink="/calendar" style="font-family: 'Madera Regular'">Calendar</a>
     <span class="spacer"></span>
     <a (click)="openLoginDialog()" *ngIf="!isLoggedIn" class="mat-button" mat-button
