--- a/frontend/packingplans/src/app/pages/lower-homepage/lower-homepage.component.html
+++ b/frontend/packingplans/src/app/pages/lower-homepage/lower-homepage.component.html
@@ -1,398 +1,220 @@
-<section class="about_section layout_padding">
-  <div class="container">
-    <div class="detail-box">
-      <div class="heading_container">
-        <img src="images/heading-img.png" alt="">
-        <h2>
-          About Us
-        </h2>
-      </div>
-      <p>
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at
-        its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-      </p>
-      <div class="btn-box">
-        <a href="">
+<div class="home-page">
+  <section class="about_section layout_padding">
+    <div class="container">
+      <div class="detail-box">
+        <div class="heading_container">
+          <img src="/assets/images/luggage.png" alt="luggage image">
+          <h1 style="font-family: 'Madera Regular'">
+            About Us
+          </h1>
+        </div>
+        <p>
+          Welcome to our trip planning website! We are here to transform the way you plan and experience your trips,
+          making it easier and more enjoyable than ever before.
+        </p>
+        <div class="btn-box">
+          <a href="">
             <span>
-              Read More
+              Why Packing Plans?
             </span>
-          <img src="images/link-arrow.png" alt="">
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- end about section -->
-
-<!-- animal section -->
-
-<section class="animal_section layout_padding">
-  <div class="container">
-    <div class="animal_container">
-      <div class="box b1">
-        <div class="img-box">
-          <img src="images/dog.jpg" alt="">
-        </div>
-        <div class="detail-box">
-          <h5>
-            Cute Dog
-          </h5>
-          <p>
-            It is a long established fact that a reader will be distracted by
-          </p>
-        </div>
-      </div>
-      <div class="box b2">
-        <div class="img-box">
-          <img src="images/bird.jpg" alt="">
-        </div>
-        <div class="detail-box">
-          <h5>
-            Birds
-          </h5>
-          <p>
-            It is a long established fact that a reader will be distracted by
-          </p>
-        </div>
-      </div>
-      <div class="box b1">
-        <div class="img-box">
-          <img src="images/fish.jpg" alt="">
-        </div>
-        <div class="detail-box">
-          <h5>
-            Fish
-          </h5>
-          <p>
-            It is a long established fact that a reader will be distracted by
-          </p>
-        </div>
-      </div>
-      <div class="box b2">
-        <div class="img-box">
-          <img src="images/cat.jpg" alt="">
-        </div>
-        <div class="detail-box">
-          <h5>
-            Cat Bite
-          </h5>
-          <p>
-            It is a long established fact that a reader will be distracted by
-          </p>
+          </a>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- end animal section -->
-
-<!-- pet section -->
-
-<section class="pet_section layout_padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="img-box">
-          <img src="images/pet-img.png" alt="">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="detail-box">
-          <div class="heading_container">
-            <img src="images/heading-img.png" alt="">
+  <section class="benefits_section layout_padding" id="benefits">
+    <div class="container">
+      <div class="benefit_container">
+        <div class="box b1">
+          <div class="img-box">
+            <mat-icon> local_airport</mat-icon>
+          </div>
+          <div class="detail-box">
             <h2>
-              Caring for your pets
-            </h2>
-          </div>
-          <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-            letters,
-          </p>
-          <div class="btn-box">
-            <a href="">
-                <span>
-                  Read More
-                </span>
-              <img src="images/link-arrow.png" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- end pet section -->
-
-<!-- us section -->
-
-<section class="us_section layout_padding-bottom">
-  <div class="container">
-    <div class="heading_container">
-      <img src="images/heading-img.png" alt="">
-      <h2>
-        Why Choose Us
-      </h2>
-      <p>
-        It is a long established fact that a reader will be distracted by the readable content of a
-      </p>
-    </div>
-    <div class="us_container">
-      <div class="box">
-        <div class="img1-box">
-          <img src="images/pet1.png" alt="">
-        </div>
-        <div class="img2-box">
-          <img src="images/omega.png" alt="">
-        </div>
-        <div class="detail-box">
-          <h6>
-            PET NUTRITIONISTS
-          </h6>
-        </div>
-      </div>
-      <div class="box">
-        <div class="img1-box">
-          <img src="images/pet2.png" alt="">
-        </div>
-        <div class="img2-box">
-          <img src="images/dog.png" alt="">
-        </div>
-        <div class="detail-box">
-          <h6>
-            STANDARDS
-          </h6>
-        </div>
-      </div>
-      <div class="box">
-        <div class="img1-box">
-          <img src="images/pet2.png" alt="">
-        </div>
-        <div class="img2-box">
-          <img src="images/shield.png" alt="">
-        </div>
-        <div class="detail-box">
-          <h6>
-            QUALITY & SAFETY
-          </h6>
-        </div>
-      </div>
-    </div>
-    <div class="btn-box">
-      <a href="">
-          <span>
-            Read More
-          </span>
-        <img src="images/link-arrow.png" alt="">
-      </a>
-    </div>
-  </div>
-</section>
-
-<!-- end us section -->
-
-<!-- food section -->
-
-<section class="food_section layout_padding">
-  <div class="container">
-    <div class="heading_container">
-      <img src="images/heading-img.png" alt="">
-      <h2>
-        Our Dog Food
-      </h2>
-      <p>
-        It is a long established fact that a reader will be distracted by the readable content of a
-      </p>
-    </div>
-    <div class="food_container">
-      <div class="box">
-        <div class="img-box">
-          <img src="images/f1.png" alt="">
-        </div>
-        <div class="detail-box">
-          <h6>
-            Basic
-          </h6>
-          <h3>
-            <span>$</span>100
-          </h3>
-          <a href="">
-            Buy Now
-          </a>
-        </div>
-      </div>
-      <div class="box">
-        <div class="img-box">
-          <img src="images/f2.png" alt="">
-        </div>
-        <div class="detail-box">
-          <h6>
-            Medium
-          </h6>
-          <h3>
-            <span>$</span>200
-          </h3>
-          <a href="">
-            Buy Now
-          </a>
-        </div>
-      </div>
-      <div class="box">
-        <div class="img-box">
-          <img src="images/f3.png" alt="">
-        </div>
-        <div class="detail-box">
-          <h6>
-            Standard
-          </h6>
-          <h3>
-            <span>$</span>300
-          </h3>
-          <a href="">
-            Buy Now
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<!-- end food section -->
-
-<!-- client section -->
-
-<section class="client_section layout_padding">
-  <div class="container">
-    <div class="heading_container">
-      <img src="images/heading-img.png" alt="">
-      <h2>
-        What Says Our Customer
-      </h2>
-      <p>
-        It is a long established fact that a reader will be distracted by the
-      </p>
-    </div>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/client.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Jack Mengo
-              </h4>
-              <p>
-                It is a long established fact that a reader will be distracted by the readable cIt is a long established
-                fact that a reader will be distracted by the readable c
-              </p>
-              <img src="images/quote.png" alt="">
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/client.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Jack Mengo
-              </h4>
-              <p>
-                It is a long established fact that a reader will be distracted by the readable cIt is a long established
-                fact that a reader will be distracted by the readable c
-              </p>
-              <img src="images/quote.png" alt="">
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/client.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>
-                Jack Mengo
-              </h4>
-              <p>
-                It is a long established fact that a reader will be distracted by the readable cIt is a long established
-                fact that a reader will be distracted by the readable c
-              </p>
-              <img src="images/quote.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel_btn-box">
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- end client section -->
-
-<!-- contact section -->
-
-<section class="contact_section layout_padding-top">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-5 offset-md-1">
-        <div class="form_container">
-          <div class="heading_container">
-            <img src="images/heading-img.png" alt="">
-            <h2>
-              Request A Call Back
+              Trip Organization
             </h2>
             <p>
-              It is a long established fact that a reader will be distracted by the
+              Our calendar feature empowers you to effortlessly plan and manage your trips. You can easily schedule
+              activities,
+              and keep track of all your travel plans in one place.
             </p>
           </div>
-          <form action="">
-            <div>
-              <input type="text" placeholder="Full Name "/>
-            </div>
-            <div>
-              <input type="text" placeholder="Phone number"/>
-            </div>
-            <div>
-              <input type="email" placeholder="Email"/>
-            </div>
-            <div>
-              <input type="text" class="message-box" placeholder="Message"/>
-            </div>
-            <div class="d-flex ">
-              <button>
-                SEND
-              </button>
-            </div>
-          </form>
         </div>
-      </div>
-      <div class="col-md-6 px-0">
-        <div class="map_container">
-          <div class="map-responsive">
-            <iframe
-              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
-              width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%"
-              allowfullscreen></iframe>
+        <div class="box b2">
+          <div class="img-box">
+            <mat-icon> place</mat-icon>
+          </div>
+          <div class="detail-box">
+            <h2>
+              Personalized Itineraries
+            </h2>
+            <p>
+              We understand that every traveler is unique, which is why we provide a highly customizable experience.
+              Tailor your itinerary to suit your preferences by adding destinations, dates, and specific activities.
+              Make your trip truly yours!
+            </p>
+          </div>
+        </div>
+        <div class="box b1">
+          <div class="img-box">
+            <mat-icon>edit</mat-icon>
+          </div>
+          <div class="detail-box">
+            <h2>
+              Flexible Customization
+            </h2>
+            <p>
+              We understand that plans can change, and our easily editable trips site empowers you to adapt to those
+              changes.
+              You can add or remove activities, adjust durations, update locations, and customize various aspects of
+              your
+              trip with flexibility and ease.
+            </p>
+          </div>
+        </div>
+        <div class="box b2">
+          <div class="img-box">
+            <mat-icon>public</mat-icon>
+          </div>
+          <div class="detail-box">
+            <h2>
+              Seamlessly Collaborate
+            </h2>
+            <p>
+              Planning a trip with friends or family?
+              Our collaborative features make it easy to coordinate and share your travel plans.
+              Invite others to join your trip, assign tasks, and collaborate in real-time, ensuring everyone stays on
+              the same page.
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- end contact section -->
+  <section class="steps_section" id="how-it-works">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="/assets/images/step1.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h1>
+                Step 1: Choose your Destination
+              </h1>
+            </div>
+            <p>
+              Our website offers a list of the most popular travel destinations from around the world.
+              You can browse through these locations and get inspired by the possibilities for your next trip.
+              To narrow down the list of locations and find the perfect match for your interests,
+              you can select specific tags that represent the types of experiences you desire.
+              For example, if you're a beach lover, you can choose the "beach" tag to see destinations renowned for
+              their stunning coastlines.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="steps_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h1>
+                Step 2: Select the Time
+              </h1>
+            </div>
+            <p>
+              If you know where, then all you need to worry for now is when. After you picked the location from our wide
+              selection of destinations, you need to choose the time interval when you want to travel next. You can make
+              your
+              vacation as long as you want, but make sure to specify both start date and end date of it.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="/assets/images/step2.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="steps_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="/assets/images/step3.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h1>
+                Step 3: Customize your trip
+              </h1>
+            </div>
+            <p>
+              Once the location and time frame are set, you can embark on a truly personalized journey by adding
+              custom activities. Our website empowers you to create
+              a one-of-a-kind itinerary by incorporating activities that reflect your interests, preferences, and
+              desired experiences.
+              Make sure you have everything planed: add the time, name and maybe a short description for all your
+              activities.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="steps_section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="detail-box">
+            <div class="heading_container">
+              <h1>
+                Step 4: Check your calendar
+              </h1>
+            </div>
+            <p>
+              Once you are satisfied with your trip plan, you can save it on the website.
+              Saving the trip stores all the chosen locations, time frame, and activities in your user profile.
+              The website provides a visual representation of your trip itinerary,
+              with each day displaying the scheduled activities. You can easily navigate
+              through the calendar, view specific days, and make any necessary edits or adjustments.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="img-box">
+            <img src="/assets/images/step4.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="packing_plans_section">
+    <div class="container">
+      <div class="heading_container">
+        <img src="/assets/images/logo.png" alt="logo" (click)="scrollToNavbar()" class="logo-image">
+        <h2 style="font-family: 'Madera W01 Bold'">
+          Packing Plans
+        </h2>
+        <p>
+          No more struggling with Word docs, spreadsheets and Google Maps to plan a trip!
+        </p>
+      </div>
+    </div>
+  </section>
+</div>
