--- a/frontend/packingplans/src/app/components/trip-actions/trip-actions.component.css
+++ b/frontend/packingplans/src/app/components/trip-actions/trip-actions.component.css
@@ -25,6 +25,20 @@
   line-height: 1.7;
 }
 
+.editablefield {
+  display: inline;
+  padding: 0;
+  font-family: "Madera Regular";
+  font-size: larger;
+}
+
+.editablefield-date {
+  display: inline;
+  padding: 0;
+  font-family: "Madera Regular";
+  font-size: medium;
+}
+
 .static-info {
   display: inline;
   padding: 0;
@@ -46,3 +60,14 @@
   font-size: medium;
 }
 
+.edit-mat-button {
+  float: right;
+  margin-top: 0.5%;
+  color: #222136;
+  margin-right: 2%;
+  cursor: pointer;
+}
+
+.edit-mat-button:hover {
+  transform: scale(1.25) perspective(1px);
+}
