--- a/frontend/packingplans/src/app/pages/location-page/location-page.component.html
+++ b/frontend/packingplans/src/app/pages/location-page/location-page.component.html
@@ -21,3 +21,5 @@
                        [tags]="card.tagNames"></app-location-card>
   </div>
 </div>
+<div class="mt-5 mb-5">.</div>
+<div class="mt-5 mb-5">.</div>
