--- a/frontend/packingplans/src/app/components/location-card/location-card.component.css
+++ b/frontend/packingplans/src/app/components/location-card/location-card.component.css
@@ -2,6 +2,7 @@
   max-width: 100%;
   margin-left: 15%;
   background-color: #b5b2bd;
+  box-shadow: 0 0 20px rgb(34, 33, 54);
   border-radius: 15px;
 }
 
