--- a/frontend/packingplans/src/styles.css
+++ b/frontend/packingplans/src/styles.css
@@ -17,7 +17,8 @@
 
 html, body {
   height: 100%;
-  background-color: white;
+  /*background-color: #bdcee8;*/
+  background-image: url("/assets/images/background.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
