--- a/frontend/packingplans/src/app/pages/card-page/card-page.component.html
+++ b/frontend/packingplans/src/app/pages/card-page/card-page.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="col-sm-2">
       <button
-        [routerLink]="isDatesValid() ? getRouterLink() : null"
+        [routerLink]="isDatesValid() && isLoggedIn ? getRouterLink() : null"
         (click)="planButtonPressed = true"
         class="trip-button">
         Plan trip here!
@@ -33,7 +33,9 @@
       <div *ngIf="!isDatesValid() && planButtonPressed" class="row alert alert-danger error" role="alert">
         Please Select both start and end data
       </div>
-    </div>
+      <div *ngIf="!isLoggedIn && planButtonPressed" class="row alert alert-danger error" role="alert">
+        You have to log in to access this resource
+      </div>
   </div>
   <div class="line"></div>
   <div class="row">
