--- a/frontend/packingplans/src/app/components/all-users/all-users.component.html
+++ b/frontend/packingplans/src/app/components/all-users/all-users.component.html
@@ -1,6 +1,6 @@
 <ul class="activities-list">
   <li *ngFor="let user of users">
-    {{ user.username }} ({{user.email}})
+    {{ user }}
     <br>
   </li>
 </ul>
