--- a/frontend/packingplans/src/app/components/new-activity/new-activity.component.html
+++ b/frontend/packingplans/src/app/components/new-activity/new-activity.component.html
@@ -15,7 +15,7 @@
       Activity day:
       <select class="selector" [(ngModel)]="activityDay">
         <option *ngFor="let day of days" [value]="day">
-          {{ day.getDate() }}/{{ day.getMonth() }}/{{ day.getFullYear() }}</option>
+          {{ day.getDate() }}/{{ day.getMonth() + 1 }}/{{ day.getFullYear() }}</option>
       </select>
     </div>
     <textarea placeholder="Activity details"
